# 1KARPES_DAQ

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  camera.py  environment.yml  framegrab.ui  framegui.py  framegui.spec  legendtable.py  livelogreader.py  logreader.py  logviewer.py  logviewer.spec  logviewer.ui  main.py  main.ui  mg15.spec  motioncontrol.spec  pyloncam.spec  pyproject.toml  qt_extensions.py  requirements_basler.txt  requirements_logviewer.txt  requirements_mg15.txt  requirements_motioncontrol.txt  requirements_pyloncam.txt  requirements_tempcontroller.txt  requirements_webcam.txt  server_status.ui  servers.py  status.py  status.ui  tempcontroller.spec  test_gui.py  test_gui.ui  webcam.py  webcam.spec  webcam.ui
.github/workflows/: build.yml  build_basler.yml  build_f70h.yml  build_logviewer.yml  build_logviewer_macos.yml  build_mg15.yml  build_motioncontrol.yml  build_pyloncam.yml  build_tempcontrol.yml  build_tempcontroller.yml  build_webcam.yml
qt_extensions/: legendtable.py  servercontrol.py
scripts/: polarization_analysis.ipynb  waveplate_flux.py
shared/qt_extensions/: pyproject.toml
shared/qt_extensions/src/qt_extensions/: colors.py  legendtable.py  servercontrol.py
src/: camera.ui  cameramonitor_config.ui  constants.py  framegrab.ui  framegui.py  livelogreader.py  logreader.py  logviewer.py  logviewer.ui  logviewer_patch.py  main.py  main.ui  main_old.py  pyloncam.py  pyloncam.ui  server_status.ui  servers.py  start.bat  status.py  status.ui  test_gui.py  webcam.py
src/attributeserver/: getter.py  server.py  status.ui  widgets.py
src/daq/: main.py  main.ui  monitoring_gui.py  monitoring_servers.bat  start.bat
src/daq/attributeserver/: __init__.py  dell_server.py  getter.py  server.py  widgets.py
src/daq/sescontrol/: __init__.py  liveviewer.py  renamedialog.ui  scan.py  ses_win.py  widgets.py
src/daq/sescontrol/plugins/: piezomotors.py
src/deprecated/: camera.py  main_old.py  servers.py  status.py  test_gui.py
src/erpes_daq/: monitoring_servers.bat  pyproject.toml  start.bat
src/erpes_daq/attributeserver/: status.ui
src/erpes_daq/sescontrol/: motordialog.ui
src/erpes_daq/src/erpes_daq/: __main__.py  main.py  monitoring_gui.py
src/erpes_daq/src/erpes_daq/attributeserver/: __init__.py  dell_server.py  getter.py  server.py  status.ui  widgets.py
src/erpes_daq/src/erpes_daq/sescontrol/: liveviewer.py  scan.py  scantype.ui  ses_win.py  widgets.py
src/erpes_daq/src/erpes_daq/sescontrol/plugins/: fakemotor.py  optics.py  piezomotors.py
src/f70h/: f70h.py  main.py  main.spec  pyproject.toml  requirements.txt  start_f70_monitor.bat
src/f70h/src/f70h/: __main__.py  main.py
src/images/: logviewer.icns
src/logviewer/: logreader.py  main.py  main.spec  pyproject.toml
src/logviewer/assets/: Assets.car
src/logviewer/src/logviewer/: __main__.py  main.py
src/mg15/: main.py  main.spec  mg15.py  plotting.ui  pressures.ui  pyproject.toml  requirements.txt  ui_test.py
src/mg15/src/mg15/: __main__.py  main.py  pressures.ui  ui_test.py
src/motioncontrol/: channel.ui  controller.ui  controller_single.ui  hello.py  log_capacitance.py  main.py  main.spec  main_single.py  maniserver.py  moee.py  motionwidgets.py  piezomotors.ini  pyproject.toml  requirements.txt
src/motioncontrol/src/motioncontrol/: __main__.py  log_capacitance.py  main.py  motionwidgets.py
src/opticscontrol/: README.md  pyproject.toml  start.bat
src/opticscontrol/src/opticscontrol/: main.py  opticsserver.py  polarization.py  server.py
src/opticscontrol/src/opticscontrol/elliptec/: __init__.py  commands.py  communicate.py  parsers.py
src/powermeter/: pyproject.toml  start.bat
src/powermeter/src/powermeter/: __init__.py  command.ui  connection.py  main.py  main.ui  server.py  widgets.py
src/pyloncam/: main.py  main.spec  pyproject.toml  qt_extensions  requirements.txt
src/pyloncam/src/pyloncam/: __main__.py  main.py  main.spec
src/qt_extensions/: colors.py  legendtable.py  plotting.py
src/sescontrol/: liveviewer.py  scan.py  scantype.ui  scanwidget.py  scanwidgets.py  ses_gui.py  ses_win.py  widgets.py
src/sescontrol/plugins/: __init__.py  fakemotor.py  piezomotors.py
src/shared/qt_extensions/: colors.py  legendtable.py  plotting.py  servercontrol.py
src/tempcontrol/: main.py  main.spec  pyproject.toml  widgets.py
src/tempcontrol/src/tempcontrol/: __main__.py  command.ui  heater.ui  heatswitch.ui  main.py  widgets.py
src/tempcontroller/: command.ui  connection.py  heater.ui  heatswitch.ui  main.py  main.spec  main.ui  plotting.ui  pyproject.toml  qt_extensions  reading.ui  requirements.txt  widgets.py
src/tempcontroller/qt_extensions/: __init__.py  legendtable.py
src/webcam/: main.py  main.spec  pyproject.toml  requirements.txt
src/webcam/src/webcam/: __main__.py  main.py  main.spec
