[project]
name = "erpes_software"
version = "0.1.0"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
requires-python = ">=3.11"
dependencies = [
    "qt_extensions",
    "erpes_daq",
    "logviewer",
    "f70h",
    "mg15",
    "motioncontrol",
    "pyloncam",
    "tempcontrol",
    "webcam",
    "opticscontrol",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.0.1",
]

[tool.uv.sources]
qt_extensions = { workspace = true }
erpes_daq = { workspace = true }
logviewer = { workspace = true }
f70h = { workspace = true }
mg15 = { workspace = true }
motioncontrol = { workspace = true }
pyloncam = { workspace = true }
tempcontrol = { workspace = true }
webcam = { workspace = true }
opticscontrol = { workspace = true }

[tool.uv.workspace]
members = ["shared/*", "src/*"]

[tool.ruff]
line-length = 88
indent-width = 4
include = ["pyproject.toml", "*.py"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    # "FBT",
    "B",
    "A",
    "C4",
    # "DTZ",
    "FA",
    "ICN",
    "LOG",
    "G",
    "PIE",
    # "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TC",
    "INT",
    # "ARG",
    # "PTH",
    # "FIX",
    # "PLC",
    # "PLE",
    # "PLW",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    "F401",   # Unused import
    "E402",   # Module level import not at top of file
    "ICN001", # Import conventions
    "TRY003", # Long exception messages
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
extend-select = []
allowed-confusables = ["−", "γ"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
allow_redefinition = true
check_untyped_defs = false
exclude = []
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["import-untyped"]
pretty = true
