[project]
name = "qt_extensions"
version = "0.0.1"
description = "Utility functions related to Qt and pyqtgraph"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
requires-python = ">=3.11"
dependencies = ["matplotlib", "numpy", "pyqtgraph", "qtpy", "qtawesome"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
