[project]
name = "qt_extensions"
version = "0.0.1"
description = "Utility functions related to Qt and pyqtgraph"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.2",
    "pyqtgraph>=0.13.7",
    "qtawesome>=1.3.1",
    "qtpy>=2.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
