[project]
name = "erpes_daq"
version = "0.1.0"
description = "Main DAQ software for 1K ARPES"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
requires-python = ">=3.11"
dependencies = [
    "erlab>=3.5.1",
    "humanize>=4.11.0",
    "numbagg>=0.8.2",
    "numpy>=2.0.2",
    "pyqt6>=6.8.0",
    "pywin32>=308 ; sys_platform == 'win32'",
    "pywinauto>=0.6.9 ; sys_platform == 'win32'",
    "pyzmq>=26.2.0",
    "qtpy>=2.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
