[project]
name = "f70h"
version = "0.1.0"
description = "GUI Interface for the F70H Helium Compressor"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.8.0",
    "pyserial>=3.5",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "qtpy>=2.4.2",
    "slack-sdk>=3.34.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
]
