[project]
name = "logviewer"
version = "0.1.0"
description = "Log viewer for 1K ARPES"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyqt6>=6.8.0",
    "pyqtgraph>=0.13.4",
    "qt_extensions",
    "qtawesome>=1.3.1",
    "qtpy>=2.4.2",
    "tomlkit>=0.13.2",
]

[tool.uv.sources]
qt_extensions = { workspace = true }

[dependency-groups]
dev = ["pyinstaller>=6.11.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
