[project]
name = "mg15"
version = "0.1.0"
description = "GUI for the MG15 vacuum gauge controller"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pymodbus<=3.6.9",
    "pyqt6>=6.8.0",
    "pyqtgraph>=0.13.4",
    "qtpy>=2.4.2",
]

[dependency-groups]
dev = ["pyinstaller>=6.11.1"]
