[project]
name = "motioncontrol"
version = "0.1.0"
description = "GUI for moeemotion piezo controllers"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pyqt6>=6.8.0",
    "pyqtgraph>=0.13.4",
    "pyzmq>=26.2.0",
    "qtawesome>=1.3.1",
    "qtpy>=2.4.2",
]

[dependency-groups]
dev = ["pyinstaller>=6.11.1"]
