[project]
name = "powermeter"
version = "0.1.0"
description = "Laser power monitor"
readme = "README.md"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "psutil>=7.0.0",
    "pyperclip>=1.9.0",
    "pyqt6>=6.8.0",
    "pyqtgraph>=0.13.7",
    "pyusb>=1.3.1",
    "pyvisa>=1.15.0",
    "pyvisa-py>=0.8.0",
    "qtpy>=2.4.2",
    "zeroconf>=0.147.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
