[project]
name = "tempcontrol"
version = "0.1.0"
description = "GUI for Lakeshore temperature controllers"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pyqt6>=6.8.0",
    "pyqtgraph>=0.13.4",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "qt-extensions",
    "qtawesome>=1.3.1",
    "qtpy>=2.4.2",
    "tomlkit>=0.13.2",
]

[tool.uv.sources]
qt-extensions = { workspace = true }

[dependency-groups]
dev = ["pyinstaller>=6.11.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
