[project]
name = "webcam"
version = "0.1.0"
description = "Simple GUI for USB webcams"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0.84",
    "pyqt6>=6.8.0",
    "pyqtgraph>=0.13.4",
    "qtpy>=2.4.2",
]

[dependency-groups]
dev = ["pyinstaller>=6.11.1"]
